updated website with more style

--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 </head>
 <body>
     <div class="container">
-        <!-- Header Section -->
-        <header>
-            <h1>Zees Teacup Rentals</h1>
-            <p>Beautiful, unique teacups for rent – perfect for events, photoshoots, and more!</p>
-        </header>
+        <!-- Hero Section -->
+        <section class="hero">
+            <div class="hero-overlay">
+                <div class="hero-text">
+                    <h1>Zees Teacup Rentals</h1>
+                    <p>Elegant teacups for your special events and gatherings.</p>
+                </div>
+            </div>
+        </section>
 
         <!-- Gallery Section -->
         <section id="gallery">
-            <h2>Our Teacups Collection</h2>
+            <h2>Our Teacup Collection</h2>
             <div class="gallery-container">
                 <img src="images/teacup1.jpg" alt="Elegant Teacup 1">
                 <img src="images/teacup2.jpg" alt="Elegant Teacup 2">
@@ -28,7 +32,7 @@
         <!-- Contact Section -->
         <section id="contact">
             <h2>Contact Us</h2>
-            <p>If you have any questions or would like to book a rental, feel free to reach out!</p>
+            <p>We'd love to hear from you! Feel free to reach out for inquiries or bookings.</p>
             <p>Email: <a href="mailto:contact@zeesteacup.com">contact@zeesteacup.com</a></p>
             <p>Phone: <a href="tel:+1234567890">123-456-7890</a></p>
         </section>
